--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 }
 .header .logo{
     display: block;
-    background-image: url(/img/logo.png);
+    background-image: url(img/logo.png);
     width: 80px;
     height: 48.57px;
     text-indent: 101%;
@@ -119,7 +119,7 @@
 
  /* banner */
  .banner{
-     background-image: url(/img/banner.png);
+     background-image: url(img/banner.png);
      background-size:cover;
      background-position:center center;
      height: 840px;
@@ -333,7 +333,7 @@
 
 /* co-brand */
 .co-brand{
-    background-image: url(/img/bg.png);
+    background-image: url(img/bg.png);
     background-size:cover;
     background-position: 10% 60%;
 }
@@ -358,12 +358,12 @@
     text-align: center;
 }
 .double{
-    background-image: url(/img/product-8.png);
+    background-image: url(img/product-8.png);
     background-size: contain;
     filter:contrast(50%);
 }
 .youth{
-    background-image: url(/img/product-9.png);
+    background-image: url(img/product-9.png);
     background-size: contain;
     filter:contrast(50%);
 }
@@ -374,7 +374,7 @@
     padding-top: 40px;
 }
 .co-brand{ 
-    background-image: url(/img/bg.png);
+    background-image: url(img/bg.png);
     background-size:cover;
     background-position: 10% 60%;
 }
