--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 }
 .header .logo{
     display: block;
-    background-image: url(./img/logo.png);
+    background-image: url(/img/logo.png);
     width: 80px;
     height: 48.57px;
     text-indent: 101%;
